; ModuleID = '/home/carl/AnghaBench/vlc/src/input/extr_decoder.c_ModuleThread_GetDisplayRate.c'
source_filename = "/home/carl/AnghaBench/vlc/src/input/extr_decoder.c_ModuleThread_GetDisplayRate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.decoder_owner = type { float, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (float (i32*)* @ModuleThread_GetDisplayRate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal float @ModuleThread_GetDisplayRate(i32* %0) #0 {
  %2 = alloca float, align 4
  %3 = alloca i32*, align 8
  %4 = alloca %struct.decoder_owner*, align 8
  %5 = alloca float, align 4
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call %struct.decoder_owner* @dec_get_owner(i32* %6)
  store %struct.decoder_owner* %7, %struct.decoder_owner** %4, align 8
  %8 = load %struct.decoder_owner*, %struct.decoder_owner** %4, align 8
  %9 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %1
  store float 1.000000e+00, float* %2, align 4
  br label %24

13:                                               ; preds = %1
  %14 = load %struct.decoder_owner*, %struct.decoder_owner** %4, align 8
  %15 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %14, i32 0, i32 1
  %16 = call i32 @vlc_mutex_lock(i32* %15)
  %17 = load %struct.decoder_owner*, %struct.decoder_owner** %4, align 8
  %18 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %17, i32 0, i32 0
  %19 = load float, float* %18, align 4
  store float %19, float* %5, align 4
  %20 = load %struct.decoder_owner*, %struct.decoder_owner** %4, align 8
  %21 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %20, i32 0, i32 1
  %22 = call i32 @vlc_mutex_unlock(i32* %21)
  %23 = load float, float* %5, align 4
  store float %23, float* %2, align 4
  br label %24

24:                                               ; preds = %13, %12
  %25 = load float, float* %2, align 4
  ret float %25
}

declare dso_local %struct.decoder_owner* @dec_get_owner(i32*) #1

declare dso_local i32 @vlc_mutex_lock(i32*) #1

declare dso_local i32 @vlc_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
